# LinearAlgebraReview

./: .gitignore  CMakeLists.txt  main.cpp
LAR/: CMakeLists.txt
LAR/include/LAR/: Algorithms.h  LAR.h  LAR_export.h  Matrix.h  MatrixBase.h  Rational.h  Vector.h
LAR/src/: CMakeLists.txt  Rational.cpp
LAR/tests/: CMakeLists.txt  MatrixTest.cpp
